--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/main.js",
   "scripts": {
     "start": "node build/main.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
